# Static-Sort

./: .gitignore  BUILD.md  CMakeLists.txt  OPTIMIZATIONS.md  PERFORMANCE.md  QUICKSTART.md  README.md  benchmark_comprehensive.sh  run_benchmark.sh  test_optimizations.sh
benchmark/: bench_static_sort.cpp
include/: static_sort.h
test/: test_correctness.cpp  test_standalone.cpp
